2010-10-22  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/tabs/util.jl: set-tab-adjustment function for tabbed-themes

	* lisp/sawfish/wm/gaol.jl: added tabs/util to gaolled modules

	* configure.in: bumped to 2.90.0

2010-10-21  Christopher Bratusek <zanghar@freenet.de>
	* man/news.texi: fixed a typo
	                 updated

	* lisp/sawfish/wm/windows.jl: behavior change in `rename-window'.
	Check NEWS for more infos.

2010-10-19  Teika kazura <teika@lavabit.com>
	* man/news.texi: Added a template.

	* CONTRIBUTING
	* Makefile.in
	* man/news.texi
	* po/README
	* po/make-pot: Doc. Added Kim B Heino to the "Thanks" list.
	News. More translation docs.

2010-10-16  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/menus.jl: window-ops-menu does now handle
	window-matchers and makes entries insensitive accordingly.
	Also move the send-window-to and copy-window-to entries into
	the Workspace sub-menu

	* man/news.texi: typo in 1.7.0 NEWS / added 1.7.1

	* sawfish.pc.in: small fix to correctly build pager

2010-10-13  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/menus.jl: "Poweroff" bugfix (again).

2010-10-12  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/menus.jl: "Poweroff" bugfix.
	In 1.7.0, poweroff related commands under root-menu -> session can't
	be invoked. This is fixed.

	* sawfish.el: Indent of `let' is wrong, so deleted it for now.

2010-10-09  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/integration/gnome.jl
	* lisp/sawfish/wm/integration/kde.jl
	* lisp/sawfish/wm/integration/xfce.jl
	* lisp/sawfish/wm/user.jl: Desktop detection minor cleanup.
	Detection and inintialization are separated. This makes less likely
	to err when further changes are done.

	* lisp/sawfish/gtk/widgets/scheme-boolean.jl
	* lisp/sawfish/wm/user.jl: Minor cleanup. Deleted bogus imports.

	* po/make-pot: bugfix; requires "make all" prior to this.
	po/make-pot needs the file "DOC", but it used to generate it in