@@ -5,6 +5,8 @@
 
 	* configure.in: bumped to 2.90.0
 
+	* lisp/sawfish/wm/windows.jl: remove desktop-check from rename-window-func
+
 2010-10-21  Christopher Bratusek <zanghar@freenet.de>
 	* man/news.texi: fixed a typo
 	                 updated
